Updating package info

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gurps4e",
   "version": "1.0.0",
-  "description": "Compiler for the Generic Universal Roleplaying System (any) Edition system",
-  "author": "James Huddleston",
-  "license": "MIT",
+  "description": "Super unsanctioned GURPS 4th edition system",
+  "author": "Calvin",
+  "license": "",
   "private": true,
   "dependencies": {
     "gurps-foundry-roll-lib": "git+https://gitlab.com/gurps-foundry/roll-lib.git"
